[package]
name = "tspack"
version = "0.1.0"
edition = "2024"
description = "Schema-driven IoT time-series data encoding"
license = "MIT"
keywords = ["iot", "encoding", "time-series", "embedded", "no_std"]
categories = ["encoding", "embedded", "no-std"]

[features]
default = ["std"]
std = []

[dependencies]
# No dependencies for core library (no_std compatible)

[dev-dependencies]
# For benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
# Comparison targets
tsz = "0.1"                    # Gorilla implementation
rmp-serde = "1.3"              # MessagePack
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"             # JSON
# For property-based testing
proptest = "1.4"
rand = "0.8"
# For loading real datasets
csv = "1.3"

[[bench]]
name = "comparison"
harness = false

[profile.release]
lto = true
codegen-units = 1

[profile.bench]
lto = true
codegen-units = 1
